Bug 485091 - Time on Marcus Bains line always red and therefore does not show up against a red background
Summary: Time on Marcus Bains line always red and therefore does not show up against a...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.22.3
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-05 15:50 UTC by Paul Stansell
Modified: 2025-06-18 19:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Screenshot of invisible and visible Marcus Bain line (36.16 KB, image/png)
2024-04-05 15:50 UTC, Paul Stansell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Stansell 2024-04-05 15:50:42 UTC
Created attachment 168183 [details]
Screenshot of invisible and visible Marcus Bain line

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
Time on Marcus Bains line always red and therefore does not show up against a red background.  A previous version of korganizer that I used put a small block of high contrast colour behind the Marcus Bains time so that it was always visible.  The red line is also also invisible against a red background.  When "show seconds" is chosen the display flicker every second.  This did not happen with the previous version that I used.

STEPS TO REPRODUCE
1. Open korganizer
2. Change settings to display the Marcus Bain's line
3. Configure a tag that has colour red.
4. Create an event with the red colour tag (label)  at the current time
5. Observe that the Marcus Bain line and time is invisible as it's displayed as red against red.

OBSERVED RESULT
Invisible Marcus Bain line

EXPECTED RESULT
Marcus Bain line to be and text to us a colour that has high contrast against the background colour.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian
(available in About System)
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Allen Winter 2025-01-30 20:32:57 UTC
You can choose the color in the KOrganizer settings under Color and Fonts, see the "Agenda View current-time line color"

maybe we should say setting "Agenda View current-time (Marcus Bains) line color"?
Comment 2 Paul Stansell 2025-01-31 08:19:29 UTC
Thanks for your reply.  I agree with you that using "Marcus Bains line" as the name would have helped me as that's the name by which I know the line.   What would be even nicer is if the line changed colour so that it was never invisible against the colour of the background event.
Comment 3 Bug Janitor Service 2025-02-02 13:24:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/korganizer/-/merge_requests/127
Comment 4 Bug Janitor Service 2025-02-02 16:58:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/korganizer/-/merge_requests/128
Comment 5 Allen Winter 2025-02-15 20:11:46 UTC
Git commit 4ff2042c8b0a6738f16697408d0c23617062db92 by Allen Winter.
Committed on 15/02/2025 at 20:08.
Pushed by winterz into branch 'master'.

Update the current-time (Marcus Bains) setting labels

Depending on locale, when the Marcus Bains shows seconds it can
also show the timezone.

Put "(Marcus Bains)" on the color and fonts setting labels.

M  +3    -3    doc/index.docbook
M  +6    -6    src/settings/korganizer.kcfg

https://invent.kde.org/pim/korganizer/-/commit/4ff2042c8b0a6738f16697408d0c23617062db92
Comment 6 Bug Janitor Service 2025-02-23 13:40:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/108
Comment 7 Allen Winter 2025-02-25 12:42:21 UTC
Git commit d847dd63e5eaf4c5e1253f71fe885ec43f8b8a43 by Allen Winter.
Committed on 23/02/2025 at 13:36.
Pushed by winterz into branch 'master'.

src/agenda/agenda.cpp - add a background to the Marcus Bains line

to increase readability over backgrounds with colors similar
the the Marcus Bains line color

M  +6    -0    src/agenda/agenda.cpp

https://invent.kde.org/pim/eventviews/-/commit/d847dd63e5eaf4c5e1253f71fe885ec43f8b8a43