Set the default Marcus Bains color from the user palette (NegativeText)

No longer hard code the default Marcus Bains line color to red.
Instead, use the NegativeText Foreground role from the user palette.

NegativeText represents "errors, untrusted content, deletions" which
is not the best fit, contextually; yet it does provide the closet color.

before and after screenshots are attached to the merge request.

BUG: 485091